<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">


    <TextView
        android:id="@+id/text_name_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_part_info_prompt_text"
        style="" />


    <EditText
        android:id="@+id/edit_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_id_hint_text"
        android:inputType="text" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name_hint_text"
        android:inputType="text"/>


    <EditText
        android:id="@+id/edit_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_price_hint_text"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/edit_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_description_hint_text"
        android:inputType="text" />

    <EditText
        android:id="@+id/edit_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_quantity_hint_text"
        android:inputType="number" />

</LinearLayout>