<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <EditText
        android:id="@+id/edit_text_oem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_id_hint_text"
        android:inputType="text"/>

    <EditText
        android:id="@+id/edit_text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name_hint_text"
        android:inputType="text"/>

    <EditText
        android:id="@+id/edit_text_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_price_hint_text"
        android:inputType="numberDecimal"/>

    <EditText
        android:id="@+id/edit_text_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_description_hint_text"
        android:inputType="text"/>

    <EditText
        android:id="@+id/edit_text_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_quantity_hint_text"
        android:inputType="number"/>

</LinearLayout>